[package]
name = "mini-proxad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
byte-unit = { version = "5.1.6", features = ["serde"] }
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
either = "1.15.0"
enum_dispatch = "0.3.13"
etherparse = "0.18.0"
futures = "0.3.31"
futures-util = "0.3.31"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.6.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
inotify = { version = "0.11.0", features = ["stream"] }
pcap-file = "2.0.0"
pyo3 = { version = "0.25.1", features = [
  "anyhow",
  "auto-initialize",
  "chrono",
  "either",
  "macros",
  "uuid",
] }
rlimit = "0.10.2"
rustls = { version = "0.23", features = ["tls12"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
strfmt = "0.2.4"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
  "fmt",
] }
uuid = { version = "1.17.0", features = ["v4"] }
webpki-roots = "1.0.1"
